Details
-
Bug
-
Status: Closed
-
Major
-
Resolution: Fixed
-
None
-
None
-
None
Description
If you have transparency enabled on your port and you disable the dedicated accept_threads, the TCP connection does not complete for HTTP and HTTPS traffic. Enabling the accept_thread causes traffic to flow again. Traffic via a remap rule also works (once you apply the fix to TS-3603).
Looking at the packet capture, the client sends SYN's but they are never responded to. It appears that the listen doesn't really get set up in this case.
Attachments
Issue Links
- relates to
-
TS-3603 Debug Assert occurs in UnixNetVConnection::set_enabled when accept_threads are disabled
-
- Closed
-