TS-3604: Transparent mode does not work when accept_threads set to 0.